# hui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build_courier.sh  build_d_courier.sh  build_d_hui.sh  build_hui.sh  build_license_header.sh  build_man_courier.sh  build_man_hui.sh  build_t_hstring.sh  cfg_build.sh  cfg_install.sh  clean.sh  color.c  color.h  commands.md  common.c  common.h  config.h  config.mk  config.sh  courier.c  features.md  hstring.c  hstring.h  hui.1  hui.c  install.sh  keybinds.md  menu.h  outvserr.c  scripts.h  sequences.c  sequences.h  t_hstring.c  test_cfg.h  test_scripts.h  (+2 more)
cfg/: cfg_common.h  cfg_courier.h  cfg_hui.h  config.h  scripts.h
cfg_example/: cfg_common.h  cfg_courier.h  cfg_hui.h  config.h  scripts.h
docs/: commands.md  courier.1  features.md  goal_omissions.md  goals.md  hui.1  inspiration.md  keybinds.md  mock_up.txt  stdin_bug.md  todo.md  todo.txt  versioning.md
etc/: house_de.json
etc/house_de.d/: debug.json  template.json
example_etc/: house_de  house_de.toml
example_etc/house_de.d/: debug.json  generic_guard  generic_guard.json  generic_guard.toml
src/: color.c  color.h  common.c  common.h  config.rs  courier.c  deskenv.rs  desktop_environment.rs  hstring.c  hstring.h  hui.c  interface.rs  license_str.h  logger.rs  lua.rs  main.rs  menu.h  menus.rs  sequences.c  sequences.h  t_hstring.c
