[package]
name = "house_de"
version = "0.1.0"
authors = ["SchokiCoder <afschoknecht@gmail.com>"]
repository = "https://github.com/SchokiCoder/house_de"
edition = "2018"
license = "GPLv3"
publish = false

[dependencies]
rpassword = "7.0.*"
pam = "0.7.*"
termion = "1.5.*"
json = "0.12.*"
chrono = "0.4.*"