[package]
name = "house_de"
version = "0.2.0"
authors = ["SchokiCoder <afschoknecht@gmail.com>"]
repository = "https://github.com/SchokiCoder/house_de"
edition = "2018"
license = "GPLv3"
publish = false

[dependencies]
#rpassword = "7.0.*"	# login deprecated
#pam = "0.7.*"			# login deprecated
termion = "1.5.*"
json = "0.12.*"
chrono = "0.4.*"
rlua = "0.19.*"